--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8080
 spring.application.name=enova-sante
 spring.datasource.url=jdbc:h2:mem:enova-sante-db
+spring.jpa.hibernate.ddl-auto=update
