--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-server.port=8080
-spring.application.name=enova-sante
-spring.datasource.url=jdbc:h2:mem:enova-sante-db
-spring.jpa.hibernate.ddl-auto=update
+#server.port=8080
+#spring.application.name=enova-sante
+#spring.datasource.url=jdbc:h2:mem:enova-sante-db
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/enova-sante-db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.show-sql=true
