setted up pagination with specification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ server.port=8080
 spring.application.name=enova-sante
 spring.datasource.url=jdbc:h2:mem:enova-sante-db
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+logging.level.org.hibernate.type=trace
+
+spring.output.ansi.enabled=always
