--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 #spring.datasource.url=jdbc:h2:mem:enova-sante-db
 
 
-spring.datasource.url=jdbc:mysql://${localhost:mysqldb}:3306/enova-sante-db?createDatabaseIfNotExist=true
-spring.datasource.username=${username:root}
-spring.datasource.password=${password:root}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/enova-sante-db
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
